--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-jwt": "^4.0.1",
     "pino": "^8.19.0",
     "pino-http": "^9.0.0",
+    "redis": "^4.6.13",
     "sequelize": "^6.37.3",
     "uuid": "^9.0.1"
   },
